[package]
name = "hello_blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
# embedded-hal = "0.2"
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", features = ["rt", "stm32g474"]}
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"